# net-assistant-for-qml

./: .clang-format  .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  qml.qrc  vcpkg.json
modules/netModule/: CMakeLists.txt  MessagePacket.h  netConn.cpp  netConn.h  netConnItem.cpp  netConnItem.h  netConnItemSettings.h  tcpClientHandler.cpp  tcpClientHandler.h
modules/netModule/include/asio2/: config.hpp
qml/: GlobalColor.qml
qml/Component/: CustomTextArea.qml
qml/SettingsView/: Settings.qml  SettingsComponentCheckBox.qml  SettingsComponentComboBox.qml  SettingsComponentContainer.qml  SettingsComponentSlider.qml  SettingsComponentText.qml  SettingsComponentView.qml  SettingsView.qml
